--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
   <artifactId>hello-world</artifactId>
   <version>2.0</version>
   <packaging>hpi</packaging>
+  <scope>test</scope>
 
   <name>Hello World Example Plugin</name>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Hello+World+Plugin</url>
